# mclip

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  constants.ts  i18n.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  history.rs  lib.rs  main.rs  settings.rs  source_app.rs  storage.rs  window.rs
src/components/: AboutDialog.tsx  AboutWindow.tsx  AppFooter.tsx  AppHeader.tsx  HistoryDetailPanel.tsx  HistoryGroupNav.tsx  HistoryGroupPreviewWindow.tsx  HistoryItemPreviewWindow.tsx  HistoryList.tsx  HistoryPreviewDetailContent.tsx  HistoryPreviewDetailWindow.tsx  HistoryPreviewWindow.tsx  ImageThumb.tsx  Modal.tsx  PreferencesDialog.tsx  PreferencesWindow.tsx
src/hooks/: useClipboardApp.ts
src/lib/: tauri.ts
src/utils/: history.ts  preview.ts  settings.ts
