[package]
name = "mclip"
version = "0.1.4"
description = "Cross-platform clipboard history app built with Tauri"
authors = ["Watson"]
edition = "2021"

[lib]
name = "m_clip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3.4.1"
tauri-plugin-global-shortcut = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
